Fixed row spacing

--- a/style.css
+++ b/style.css
@@ -236,7 +236,10 @@ li {
 .row {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    width: 100%;
+    height: 50%;
+    justify-content: right;
+   padding-left: 1.5em;
 }
 
 .left-img-col,
@@ -265,12 +268,17 @@ li {
     flex-direction: column;
     font-size: 2rem;
     text-align: center;
-    width: 55%;
+    width: 40%;
+    height: 40%;
     margin: 0 auto;
 }
 
 .skills {
     /*background-color: #212122;*/
+}
+.skills2
+{
+
 }
 
 .shrink img {
